syntax = "proto3";

package task.v1;

option go_package = "task";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "task-api/rest.proto";


enum Complete {
    UNKNOWN = 0;
    RUNNING = 1;
    COMPLETED = 2;
}

// Task Entität
message Task {
    // Eine ULID
    string id = 1 [(gogoproto.moretags) = "db:\"id,pk,omitempty\""];
    // Titel des Tasks
    string title = 2 [(gogoproto.moretags) = "db:\"title,omitempty\""];
    // Beschreibung des Tasks
    string description = 3 [(gogoproto.moretags) = "db:\"description,omitempty\""];
    // Status des Tasks
    Complete completed = 4 [(gogoproto.moretags) = "db:\"completed\""];
    // Datum der Erstellung
    google.protobuf.Timestamp created_at = 5;
    // Datum der letzen Änderung
    google.protobuf.Timestamp updated_at = 6;

}

message CreateTaskRequest {
    Task item = 1;
}

message GetTaskRequest {
    string id = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message UpdateTaskRequest {
    string id = 1;
    Task item = 2;
}
// Eine Entität besteht aus dem Task und den HATEOAS Links
message TaskEntity {
    Task data = 1;
    repeated Link links = 2;
}

// ListTaskRequest
//reserved 1 to 5;
//reserved "fields", "expands", "page", "limit", "offset","sort", "filter","count","sum","context";
message ListTaskRequest {
    // Partielle Repräsentation
    string fields = 1;
    // Sortierung nach feldern
    // **?filter=-completed** um completed absteigend zu bekommen
    // **?filter=completed** um completed aufsteigend zu bekommen
    string sort = 2;
    // Filtern
    string filter = 3;
    // Gewünschte Seite. Tipp: Folge dem HATEOAS
    int32 page = 4;
    // Seitengrösse
    int32 limit = 5;
    // Meta für die Anzahl der Elemente der Resource
    bool count = 6;
    // not implemented
    string sum = 7;
    // not implemented -> wird auf view geändert um conform mit google specs zu sein
    string context = 8;
    // nur abgeschlossene Tasks anzeigen
    bool not_completed = 9;
}

message TaskCollection {
    repeated TaskEntity data = 1;
    repeated Link links = 2;
}

message DeleteTaskResponse {
}


